# theta

./: .gitignore  Dockerfile  README.md  __init__.py  _airflow_stub.py  alembic.ini  api.py  client.py  credit_score_operator.py  debt_operator.py  dq_operator.py  equity_operator.py  handler.py  iterator.py  openapi_spec.py  payment_operator.py  pyproject.toml  render.yaml  research_runner.py  sub_operator.py  test_ledger_operators.py  test_payment_operator.py
alembic/: env.py
db/: __init__.py  models.py  session.py  store.py
frontend/: index.html  manifest.json  sw.js  swagger.html  topline.html
mcp/: server.py
scripts/: fetch_rh_equity.py  run_client_demo.sh  run_handler.sh  run_iterator.sh  seed_balances.sh  seed_bank_statements.sh  seed_credit_score.sh  seed_monthly_snapshots.sh  topline.py
tests/: conftest.py  test_postgres_store.py
